apps/stirling-pdf/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: stirling-pdf
  namespace: stirling-pdf
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: shared-edge-gateway
      namespace: cilium-ingress
  hostnames:
    - pdftools.gwg313.xyz
    - pdftools.local.gwg313.xyz
    - pdftools.zerotier.gwg313.xyz
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: stirling-pdf
          port: 80
          weight: 1
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-gateway-to-stirling
  namespace: stirling-pdf
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: Gateway
      namespace: cilium-ingress
  to:
    - group: ""
      kind: Service
      name: stirling-pdf
